# EvalNet

./: .gitignore  LICENSE  README.md  pyproject.toml  tool.py
analysis/: Analysis.py  EdgeDisjointPathAnalysis.py  EdgeDisjointPathPlotter.py  InterferenceAnalysis.py  InterferencePlotter.py  Makefile  Plotter.py  README.md  ShortestPathAnalysis.py  ShortestPathPlotter.py  __init__.py  analyse.py  common.py  mmm_ops.c  results.py  results_ggplot.py  results_ggplot2.py  results_pyplot.py  simplepmap.py
analysis/delorme_analysis/: Makefile  README.md  main.cpp
tools/: translate_topology_to_booksim.py
topogen/: ArrangementNetwork.py  ArrangementNetworkGenerator.py  Brown.py  BrownExt.py  BrownExtGenerator.py  BrownGenerator.py  Bundlefly.py  BundleflyGenerator.py  CascadeDragonfly.py  CascadeDragonflyGenerator.py  Delorme.py  DelormeGenerator.py  Dragonfly.py  DragonflyGenerator.py  ExtendedGeneralizedFatTree.py  ExtendedGeneralizedFatTreeGenerator.py  FatTree.py  FatTreeGenerator.py  Flatbutterfly.py  FlatbutterflyGenerator.py  HammingMesh.py  HammingMeshGenerator.py  HyperX.py  HyperXGenerator.py  Hypercube.py  HypercubeGenerator.py  Jellyfish.py  JellyfishGenerator.py  KaryN.py  KaryNGenerator.py  Kautz.py  KautzGenerator.py  MLFM.py  MLFMGenerator.py  Megafly.py  MegaflyGenerator.py  Mesh.py  MeshGenerator.py  ModHammingMesh.py  ModHammingMeshGenerator.py  (+47 more)
topogen/polarstar/: bdf.py  paley.py  pf.py  route.py
